# api-httpbintest

./: .travis.yml  README.md  pyproject.toml
hogwards_apitest/: api.py
test/: test_core.py
tests/: test_core.py
