[tool.poetry]
name = "api-httpbintest"
version = "0.1.0"
description = "a project"
authors = ["testwhitebaby <maybezhmn@163.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.2.2"
coverage = "^5.5"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
